# sessiond

./: .gitignore  CMakeLists.txt  Makefile  README.md  go.mod  go.sum
api/msg/: msg.go
api/rpc/: session.proto
api/web/: web.go
client/: CMakeLists.txt  session_client.cc
client/include/: client_debug.h  session.h
client/lib/: session.cpp  session_client.h
client/test/: client_test.c  client_test.cpp
cmake/: common.cmake  go.cmake
cmd/sessioncheck/: CMakeLists.txt  main.go
cmd/sessionctl/: CMakeLists.txt  main.go
cmd/sessiond/: CMakeLists.txt  main.go
etc/: session_dev.yaml  session_prod.yaml
etc/redis/: redis_master.conf  redis_slave.conf
internal/session/: check.go  check_test.go  create.go  create_test.go  delete.go  delete_test.go  get.go  get_test.go  session.go  session_test.go  update.go  update_test.go
internal/web/debug/: debug.go
internal/web/health/: quantity.go  status.go
pkg/config/: config.go
pkg/dao/: dao.go
pkg/logging/: logging.go
scripts/: sessiond.service
